--- a/modules/cpu/Makefile
+++ b/modules/cpu/Makefile
@@ -3,11 +3,17 @@ obj-m += cpu_201504420_201504448.o
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
 
-clean:
+clear:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
 
-test:
+start:
 	sudo dmesg -C
 	sudo insmod cpu_201504420_201504448.ko
+	dmesg
+
+show:
+	cat /proc/cpu_201504420_201504448
+
+stop:
 	sudo rmmod cpu_201504420_201504448.ko
 	dmesg
